--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,31 @@
   <title>Beton</title>
   <base href="/">
 
+  <link rel="apple-touch-icon-precomposed" sizes="57x57" href="assets/favicon/apple-touch-icon-57x57.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/favicon/apple-touch-icon-114x114.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/favicon/apple-touch-icon-72x72.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/favicon/apple-touch-icon-144x144.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="60x60" href="assets/favicon/apple-touch-icon-60x60.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="120x120" href="assets/favicon/apple-touch-icon-120x120.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="76x76" href="assets/favicon/apple-touch-icon-76x76.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="152x152" href="assets/favicon/apple-touch-icon-152x152.png" />
+  <link rel="icon" type="image/png" href="assets/favicon/favicon-196x196.png" sizes="196x196" />
+  <link rel="icon" type="image/png" href="assets/favicon/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/png" href="assets/favicon/favicon-32x32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="assets/favicon/favicon-16x16.png" sizes="16x16" />
+  <link rel="icon" type="image/png" href="assets/favicon/favicon-128.png" sizes="128x128" />
+  <meta name="application-name" content="Beton"/>
+  <meta name="msapplication-TileColor" content="#5165f9" />
+  <meta name="msapplication-TileImage" content="assets/favicon/mstile-144x144.png" />
+  <meta name="msapplication-square70x70logo" content="assets/favicon/mstile-70x70.png" />
+  <meta name="msapplication-square150x150logo" content="assets/favicon/mstile-150x150.png" />
+  <meta name="msapplication-wide310x150logo" content="assets/favicon/mstile-310x150.png" />
+  <meta name="msapplication-square310x310logo" content="assets/favicon/mstile-310x310.png" />
+
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script type="text/javascript" src="https://connect.facebook.net/en_US/sdk.js"></script>
-  <link href="https://fonts.googleapis.com/css?family=Barlow:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&amp;subset=latin-ext" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Barlow:400,500,700&amp;subset=latin-ext" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css">
   
 </head>
