--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Beton</title>
-  <base href="http://vps409197.ovh.net/beton-front/dist/beton-frontend/">
+  <base href="/">
   <meta name="robots" content="noindex">
 
   <link rel="apple-touch-icon-precomposed" sizes="57x57" href="assets/favicon/apple-touch-icon-57x57.png" />
